<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="20dp"
    android:paddingTop="20dp">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/book_cover"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_author" />

        <TextView
            android:id="@+id/textViewDue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_due"/>

        <TextView
            android:id="@+id/textViewCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_call" />

        <TextView
            android:id="@+id/textViewRemained"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sample_remains"/>

        <TextView
            android:id="@+id/textViewFine"
            android:layout_width="157dp"
            android:layout_height="22dp"
            android:layout_marginTop="10dp"
            android:text="@string/sample_fine"/>


        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/buttonBackground"
            android:padding="10dp"
            android:textColor="#FFFFFF"
            android:text="@string/renew" />


    </LinearLayout>

</LinearLayout>