<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="7">

    <TextView
        android:id="@+id/fine_date"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:text="@string/sample_date"
        android:layout_marginRight="5dp"
        android:paddingLeft="5dp" />

    <TextView
        android:id="@+id/description_text"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:text="@string/description"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp" />

    <TextView
        android:id="@+id/amount_text"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:text="@string/fine"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:gravity="end"/>

    <TextView
        android:id="@+id/outstanding_text"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:text="@string/due"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:gravity="end" />

</LinearLayout>