<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:text="@string/demo"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="0.5">

        <Button
            android:id="@+id/first"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/first_semester"
            android:background="#00000000"
            android:layout_weight="0.25"
            android:focusable="false"/>

        <Button
            android:id="@+id/second"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/second_semester"
            android:background="#00000000"
            android:layout_weight="0.25"
            android:focusable="false"/>

    </LinearLayout>

</LinearLayout>